[B][COLOR gold]v3.3.4[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v3.3.2[/COLOR][/B]
- Added file size limits options
- Added option to display file name as extra source info
- Rearranged settings
- Applied nasty hack to circumvent odd issue with double line source list scrolling

[B][COLOR gold]v3.3.1[/COLOR][/B]
- (Re)added option for extra & high quality artwork fetching
    Personal Fanart.tv API key is recommended to be applied in settings - possibly
    requiered eventually
- Fixed some issues with "Play random"
- Fixed downloading and library insertion when title has accented/special characters

[B][COLOR gold]v3.3.0[/COLOR][/B]
- Some more text encoding/decoding fixes
- Library fix for Kodi 19/py3

[B][COLOR gold]v3.2.9[/COLOR][/B]
- Fixed some internal encoding/decoding text issues

[B][COLOR gold]v3.2.8[/COLOR][/B]
- Added option to enable/disable Trakt episodes ratings
    [I]Context:[/I]  TheTVDb stopped supporting ratings some time ago, so we resorted to Trakt
    for episodes ratings. But this takes an extra call to Trakt, which slows down the episodes
    list fetching. Now there's an option to turn this on/off - until a better solution is found.
- Made Channels main menu item optional

[B][COLOR gold]v3.2.7[/COLOR][/B]
- TV Networks now list all shows of given network, instead of current season's shows
- Added some threading here and there

[B][COLOR gold]v3.2.6[/COLOR][/B]
- Added a couple web channels on Networks
- Minor kodi 19 adjustments

[B][COLOR gold]v3.2.5[/COLOR][/B]
- Moved scraper accounts settings (ororo, filepursuit) into Oathscrapers's settings
- Quality identification fixes

[B][COLOR gold]v3.2.4[/COLOR][/B]
- Added Debrid-Link.fr to the supported torrents cache check services
- Further simplification of the sources fetching proccess/dialog
- Fixed busy dialog issue when backgroung progress dialog is selected

[B][COLOR gold]v3.2.3[/COLOR][/B]
- Fix torrent cache check not terminating if a debrid service is down