@@ -1,3 +1,11 @@
+[B][COLOR gold]v3.3.5[/COLOR][/B]
+- Added option to enable/disable size filtering
+    If you already use size filtering you'll have to enable this option, as it's off by default
+- Pre-emptive termination now takes size filters into account as well
+    That means that scraping will stop when enough sources that meet your max quality
+    and size filters criteria are found
+- Added function that tries to circumvent data mismatches between metadata sites and scene releases
+
 [B][COLOR gold]v3.3.4[/COLOR][/B]
 - Minor fixes
 
